# penny

./: .#penny.cabal  .dir-locals.el  .gitignore  .travis.yml  CartelCommon.hs  Curses.hs  Description.hs  LICENSE  Makefile  Penny.hs  README  README.md  Setup.hs  TAGS  TODO  TablePlan  balance_design  branch_notes  build-log  buildTests  buildprep  cabal.config  changelog  current-versions.txt  design  genCabal.hs  genTests.hs  generate  gensymbol.hs  graph.dot  index.html  install-docs  known-working-dependencies.txt  lengthslist  minimum-versions.txt  mkCodes  mkDigits.hs  mkInstances.hs  mkLengths.hs  mockbad.txt  (+22 more)
Penny/: .dir-locals.el  Accounts.hs  (+20 more)
convert/: Penny.hs  penny-convert.cabal  penny-convert.hs
convert/Penny/: Copper.hs  Liberty.hs  Zinc.hs
convert/Penny/Cabin/: Allocate.hs  Balance.hs  Chunk.hs  Colors.hs  Interface.hs  Meta.hs  Parsers.hs
convert/Penny/Cabin/Balance/Convert/: Options.hs
convert/Penny/Cabin/Balance/MultiCommodity/: Help.hs
convert/Penny/Cabin/Chunk/: Switch.hs
convert/Penny/Cabin/Colors/: DarkBackground.hs  LightBackground.hs
convert/Penny/Cabin/Posts/: Allocate.hs  Fields.hs  Growers.hs  Meta.hs  Parser.hs  Spacers.hs
convert/Penny/Copper/: Amount.hs  Commodity.hs  Entry.hs  Payees.hs  Posting.hs  Price.hs  Qty.hs  Tags.hs  TopLine.hs  Transaction.hs  Util.hs
convert/Penny/Copper/Memos/: Posting.hs  Transaction.hs
convert/Penny/Liberty/: Expressions.hs
convert/Penny/Liberty/Expressions/: RPN.hs
convert/Penny/Lincoln/: Bits.hs  Family.hs  HasText.hs  Matchers.hs  Meta.hs  NestedMap.hs  Serial.hs  Transaction.hs
convert/Penny/Lincoln/Bits/: Account.hs  Amount.hs  DrCr.hs  Memo.hs  Number.hs  Payee.hs  Price.hs
convert/Penny/Lincoln/Family/: Child.hs  Family.hs
convert/Penny/Zinc/: Help.hs
convert/Penny/Zinc/Parser/: Ledgers.hs
genPennyCabal/: Common.hs  Dependencies.hs  buildprep  buildprep-penny  buildprep-penny-copper  genCopperCabal.hs  genPennyCabal.cabal  genPennyCabal.hs
penny-copper/: LICENSE  README.md  buildprep  penny-copper.cabal
penny-copper/lib/Penny/Copper/: EarleyGrammar.hs  Grammar.hs  Optics.hs  Productions.hs  Terminalizers.hs  Types.hs
tests/: .gitignore  Builders.hs  Copper.hs  Decrees.hs  Lincoln.hs  PennyTest.hs  Proptree.hs  attoparsec-benchmarker.sh  dateTypes  genCabal.hs  genDateTests.hs  generate  penny-gibberish.hs  penny-properties.hs  penny-test-lib.cabal  penny-test.cabal  penny-test.hs  penny-tests.cabal  pennyTest.cabal  test-results
tests-new/: Copper.hs  Lincoln.hs  PennyTest.hs  penny-gibberish.hs  penny-test.cabal  penny-test.hs
tests-new/Copper/: Parser.hs  Render.hs
tests-new/Gibberish/: Parsers.hs
tests-new/PennyTest/: Lincoln.hs
tests/Copper/: Parser.hs  Render.hs
tests/Data/Monoid/: Properties.hs
tests/Deka/Dec/: Generators.hs
tests/Deka/Native/Abstract/: Generators.hs
tests/Gibberish/: Parsers.hs  Terminals.hs
tests/Penny/Copper/: Instances.hs  Properties.hs
tests/Penny/Copper/Date/: Instances.hs  Properties.hs
tests/Penny/Lincoln/: Instances.hs  Properties.hs
tests/Penny/Lincoln/Decimal/: Tests.hs
tests/Penny/Lincoln/Decimal/Abstract/: Generators.hs
tests/Penny/Lincoln/Decimal/Amount/: Generators.hs
tests/Penny/Lincoln/Decimal/Components/: Generators.hs
tests/Penny/Lincoln/Decimal/Concrete/: Generators.hs  Tests.hs
tests/Penny/Lincoln/Decimal/Frac/: Generators.hs
tests/Penny/Lincoln/Decimal/Lane/: Generators.hs
tests/Penny/Lincoln/Decimal/Masuno/: Generators.hs
tests/Penny/Lincoln/Decimal/Represent/: Tests.hs
tests/Penny/Lincoln/Decimal/Side/: Generators.hs
tests/Penny/Lincoln/Decimal/Zero/: Generators.hs
tests/Penny/Lincoln/Natural/: Generators.hs
tests/PennyTest/: Penny.hs
tests/PennyTest/Penny/: Copper.hs  Lincoln.hs
tests/PennyTest/Penny/Copper/: Account.hs  Atto.hs  Commodity.hs  Parsec.hs  Render.hs  Util.hs
tests/PennyTest/Penny/Lincoln/: Bits.hs  Transaction.hs
tests/PennyTest/Penny/Lincoln/Bits/: Qty.hs
tests/exe/Penny/Numbers/Abstract/Grouping/: Properties.hs
tests/exe/Penny/Numbers/Concrete/: Properties.hs
tests/exe/Penny/Numbers/Natural/: Properties.hs
tests/lib/: PennyTest.hs  penny-test-lib.cabal
tests/lib/Penny/Balance/: Coarbitrary.hs  Generators.hs  Shrinkers.hs
tests/lib/Penny/Balanced/: Coarbitrary.hs  Generators.hs
tests/lib/Penny/Common/: Coarbitrary.hs  Generators.hs  Shrinkers.hs
tests/lib/Penny/DateTime/: Coarbitrary.hs  Generators.hs  Shrinkers.hs
tests/lib/Penny/Ent/: Coarbitrary.hs  Generators.hs
tests/lib/Penny/Lincoln/Decimal/: Tests.hs
tests/lib/Penny/Lincoln/Natural/: Tests.hs
tests/lib/Penny/Numbers/Concrete/: Coarbitrary.hs  Generators.hs  Shrinkers.hs
tests/lib/Penny/Numbers/Exchange/: Coarbitrary.hs  Generators.hs  Shrinkers.hs
tests/lib/Penny/Numbers/Natural/: Coarbitrary.hs  Generators.hs  Shrinkers.hs
tests/lib/Penny/Numbers/Qty/: Coarbitrary.hs  Generators.hs  Shrinkers.hs
tests/lib/Penny/Posting/: Coarbitrary.hs  Generators.hs  Shrinkers.hs
tests/lib/Penny/Pricing/Db/: Generators.hs
tests/lib/Penny/Pricing/Price/: Generators.hs  Shrinkers.hs
tests/lib/Penny/Pricing/Trade/: Coarbitrary.hs  Generators.hs  Shrinkers.hs
tests/lib/Penny/Serial/: Coarbitrary.hs  Shrinkers.hs
tests/lib/Penny/TopLine/: Coarbitrary.hs  Generators.hs  Shrinkers.hs
tests/lib/Penny/Transaction/: Generators.hs
tests/lib/Penny/Trio/: Coarbitrary.hs  Generators.hs  Shrinkers.hs
tests/lib/PennyTest/: Copper.hs  Lincoln.hs  Pretty.hs
tests/lib/PennyTest/Copper/: Account.hs  Amount.hs  Comments.hs  Commodity.hs  DateTime.hs  Entry.hs  Flag.hs  Item.hs  Memos.hs  Number.hs  Payees.hs  Posting.hs  Price.hs  Qty.hs  Tags.hs  TopLine.hs  Transaction.hs  Util.hs
tests/lib/PennyTest/Copper/Memos/: Posting.hs  Transaction.hs
tests/lib/PennyTest/Lincoln/: Balance.hs  Bits.hs  CheckBits.hs  Family.hs  Generators.hs  Meta.hs  TextNonEmpty.hs  Transaction.hs
tests/lib/PennyTest/Lincoln/Family/: Child.hs  Family.hs  Siblings.hs
tests/lib/PennyTest/Lincoln/Transaction/: Unverified.hs
tests/lib/Prelude/: Generators.hs  Shrinkers.hs
tests/progs/: Decrees.hs
(+1065 files in other folders)
