Name: penny
Version: 0.1.0.0
Cabal-version: >=1.8
Build-Type: Simple
License: MIT
Copyright: 2012 Omari Norman.
author: Omari Norman
maintainer: omari@smileystation.com
stability: Experimental
homepage: http://www.github.com/massysett/penny
bug-reports: omari@smileystation.com
Category: Console
License-File: LICENSE
synopsis: Accounting system

description: Accounting system

source-repository head
    type: git
    location: git://github.com/massysett/penny.git

Flag testing
  Description: build test code and executables
  Default: False

Library
    Build-depends:
        base ==4.*,
        bytestring ==0.9.*,
        text ==0.11.*,
        explicit-exception ==0.1.*,
        containers ==0.4.*,
        transformers == 0.2.*,
        time ==1.2.*,
        Decimal >= 0.2.2 && < 0.3,
        parsec >= 3.1.2 && < 3.2,
        monoid-extra ==0.1.*,
        wraptainer ==0.1.*,
        multiarg ==0.3.*,
        matchers ==0.1.*,

        -- Do not use newer versions of NonEmptyList. They do not
        -- compile with newer versions of GHC due to dependency
        -- problems. However this old one works fine.
        NonEmptyList ==0.0.5
        
    if flag(testing)
       Build-depends:
         pretty ==1.0.*,
         old-locale ==1.0.*

    Exposed-modules:
        Penny.Cabin.Class,
        Penny.Cabin.Colors,
        Penny.Cabin.Postings,
        Penny.Cabin.Postings.Row,
        Penny.Copper,
        Penny.Copper.Account,
        Penny.Copper.Amount,
        Penny.Copper.Comments.Multiline,
        Penny.Copper.Comments.SingleLine,
        Penny.Copper.Commodity,
        Penny.Copper.DateTime,
        Penny.Copper.Entry,
        Penny.Copper.Flag,
        Penny.Copper.Item,
        Penny.Copper.Memos.Posting,
        Penny.Copper.Memos.Transaction,
        Penny.Copper.Number,
        Penny.Copper.Payees.Posting,
        Penny.Copper.Payees.Transaction,
        Penny.Copper.Posting,
        Penny.Copper.Price,
        Penny.Copper.Qty,
        Penny.Copper.Tags,
        Penny.Copper.TopLine,
        Penny.Copper.Transaction
        Penny.Lincoln.Balance,
        Penny.Lincoln.Bits,
        Penny.Lincoln.Bits.Account,
        Penny.Lincoln.Bits.Amount,
        Penny.Lincoln.Bits.Commodity,
        Penny.Lincoln.Bits.DateTime,
        Penny.Lincoln.Bits.DrCr,
        Penny.Lincoln.Bits.Entry,
        Penny.Lincoln.Bits.Flag,
        Penny.Lincoln.Bits.Memo,
        Penny.Lincoln.Bits.Number,
        Penny.Lincoln.Bits.Payee,
        Penny.Lincoln.Bits.Price,
        Penny.Lincoln.Bits.PricePoint,
        Penny.Lincoln.Bits.Qty,
        Penny.Lincoln.Bits.Tags,
        Penny.Lincoln.Boxes,
        Penny.Lincoln.Family,
        Penny.Lincoln.Family.Child,
        Penny.Lincoln.Family.Family,
        Penny.Lincoln.Family.Siblings,
        Penny.Lincoln.Meta,
        Penny.Lincoln.Predicates,
        Penny.Lincoln.Queries,
        Penny.Lincoln.TextNonEmpty,
        Penny.Lincoln.Transaction,
        Penny.Lincoln.Transaction.Unverified,
        Penny.Zinc.Parser,
        Penny.Zinc.Parser.Error,
        Penny.Zinc.Parser.Filter,
        Penny.Zinc.Parser.Sorter,
        Penny.Zinc.Expressions,
        Penny.Zinc.Expressions.Infix,
        Penny.Zinc.Expressions.RPN,
        Penny.Zinc.Help

    if flag(testing)
      Exposed-modules:
        Penny.Denver.Pretty

    ghc-options: -Wall

Executable copperTest
  hs-source-dirs: testing
  Build-depends:
    base ==4.*,
    text ==0.11.*,
    time ==1.2.*,
    parsec >=3.1.2 && < 3.2,
    penny ==0.1.*
  Main-is: copperTest.hs
  GHC-Options: -Wall
  if flag(testing)
    Build-depends:
      pretty ==1.0.*
  else
    buildable: False

