-- This Cabal file generated using the Cartel library.
-- Cartel is available at:
-- http://www.github.com/massysett/cartel
--
-- Script name used to generate: genCabal.hs
-- Generated on: 2014-06-03 19:39:06.142709 EDT
-- Cartel library version: 0.10.0.2
name: penny
version: 0.33.0.0
cabal-version: >= 1.14
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: 2012 - 2014 Omari Norman
author: Omari Norman
maintainer: omari@smileystation.com
stability: Experimental
homepage: http://www.github.com/massysett/penny
bug-reports: omari@smileystation.com
synopsis: Extensible double-entry accounting system
description:
  Penny is a double-entry accounting system.  You keep your records
  in a plain-text file, and Penny gives you useful reports in
  your UNIX shell.
  .
  For more information, please see
  .
  <http://www.github.com/massysett/penny>
category: Console, Finance
tested-with: GHC == 7.4.1, GHC == 7.6.3, GHC == 7.8.2
extra-source-files:
    install-docs
  , README.md
  , doc/*.dot
  , doc/*.hs
  , doc/examples/*.pny
  , doc/man/*.1
  , doc/man/*.7
  , versions.m4
  , Makefile
  , current-versions.txt
  , minimum-versions.txt
  , changelog
  , genCabal.hs

source-repository head
  type: git
  location: https://github.com/massysett/penny.git
  branch: master

Flag debug
  Description: turns on debugging options
  Default: False
  Manual: True

Flag build-penny-gibberish
  Description: Build the penny-gibberish executable
  Default: False
  Manual: True

Flag build-penny
  Description: build the penny executable
  Default: True
  Manual: True

Flag build-penny-selloff
  Description: build the penny-selloff executable
  Default: True
  Manual: True

Flag build-penny-diff
  Description: build the penny-diff executable
  Default: True
  Manual: True

Flag build-penny-reprint
  Description: build the penny-reprint executable
  Default: True
  Manual: True

Flag build-penny-reconcile
  Description: build the penny-reconcile executable
  Default: True
  Manual: True

Library
  exposed-modules:
      Penny
    , Penny.Brenner
    , Penny.Brenner.Clear
    , Penny.Brenner.Database
    , Penny.Brenner.Import
    , Penny.Brenner.Info
    , Penny.Brenner.Merge
    , Penny.Brenner.OFX
    , Penny.Brenner.Print
    , Penny.Brenner.Types
    , Penny.Brenner.Util
    , Penny.Cabin
    , Penny.Cabin.Balance
    , Penny.Cabin.Balance.Convert
    , Penny.Cabin.Balance.Convert.Chunker
    , Penny.Cabin.Balance.Convert.ChunkerPct
    , Penny.Cabin.Balance.Convert.Options
    , Penny.Cabin.Balance.Convert.Parser
    , Penny.Cabin.Balance.MultiCommodity
    , Penny.Cabin.Balance.MultiCommodity.Chunker
    , Penny.Cabin.Balance.MultiCommodity.Parser
    , Penny.Cabin.Balance.Util
    , Penny.Cabin.Interface
    , Penny.Cabin.Meta
    , Penny.Cabin.Options
    , Penny.Cabin.Parsers
    , Penny.Cabin.Posts
    , Penny.Cabin.Posts.Allocated
    , Penny.Cabin.Posts.BottomRows
    , Penny.Cabin.Posts.Chunk
    , Penny.Cabin.Posts.Fields
    , Penny.Cabin.Posts.Growers
    , Penny.Cabin.Posts.Meta
    , Penny.Cabin.Posts.Parser
    , Penny.Cabin.Posts.Spacers
    , Penny.Cabin.Posts.Types
    , Penny.Cabin.Row
    , Penny.Cabin.Scheme
    , Penny.Cabin.Scheme.Schemes
    , Penny.Cabin.TextFormat
    , Penny.Copper
    , Penny.Copper.Interface
    , Penny.Copper.Parsec
    , Penny.Copper.Render
    , Penny.Copper.Terminals
    , Penny.Denver
    , Penny.Denver.Diff
    , Penny.Denver.Reconcile
    , Penny.Denver.Reprint
    , Penny.Denver.Selloff
    , Penny.Liberty
    , Penny.Lincoln
    , Penny.Lincoln.Balance
    , Penny.Lincoln.Bits
    , Penny.Lincoln.Bits.DateTime
    , Penny.Lincoln.Bits.Open
    , Penny.Lincoln.Bits.Price
    , Penny.Lincoln.Bits.Qty
    , Penny.Lincoln.Builders
    , Penny.Lincoln.Decimal
    , Penny.Lincoln.Decimal.Abstract
    , Penny.Lincoln.Decimal.Amount
    , Penny.Lincoln.Decimal.Components
    , Penny.Lincoln.Decimal.Concrete
    , Penny.Lincoln.Decimal.Frac
    , Penny.Lincoln.Decimal.Lane
    , Penny.Lincoln.Decimal.Masuno
    , Penny.Lincoln.Decimal.Render
    , Penny.Lincoln.Decimal.Represent
    , Penny.Lincoln.Decimal.Represent.Grouped
    , Penny.Lincoln.Decimal.Represent.Ungrouped
    , Penny.Lincoln.Decimal.Side
    , Penny.Lincoln.Decimal.Zero
    , Penny.Lincoln.Ents
    , Penny.Lincoln.Equivalent
    , Penny.Lincoln.HasText
    , Penny.Lincoln.Matchers
    , Penny.Lincoln.Natural
    , Penny.Lincoln.Predicates
    , Penny.Lincoln.Predicates.Siblings
    , Penny.Lincoln.PriceDb
    , Penny.Lincoln.Queries
    , Penny.Lincoln.Queries.Siblings
    , Penny.Lincoln.Serial
    , Penny.Shield
    , Penny.Steel
    , Penny.Wheat
    , Penny.Zinc
  other-modules:
      Paths_penny
  exposed: True
  hs-source-dirs:
      lib
  build-depends:
      base ((> 4.5.0.0 || == 4.5.0.0) && < 4.8)
    , bytestring ((> 0.9.2.1 || == 0.9.2.1) && < 0.11)
    , containers ((> 0.4.2.1 || == 0.4.2.1) && < 0.6)
    , deka ((> 0.6.0.0 || == 0.6.0.0) && < 0.7)
    , old-locale ((> 1.0.0.4 || == 1.0.0.4) && < 1.1)
    , parsec ((> 3.1.3 || == 3.1.3) && < 3.2)
    , split ((> 0.2.2 || == 0.2.2) && < 0.3)
    , text ((> 0.11.3.1 || == 0.11.3.1) && < 1.2)
    , time ((> 1.4 || == 1.4) && < 1.5)
    , transformers ((> 0.3.0.0 || == 0.3.0.0) && < 0.5)
    , action-permutations ((> 0.0.0.0 || == 0.0.0.0) && < 0.0.0.2)
    , cereal ((> 0.3.5.2 || == 0.3.5.2) && < 0.5)
    , contravariant ((> 0.2.0.1 || == 0.2.0.1) && < 0.7)
    , either ((> 3.4.1 || == 3.4.1) && < 4.4)
    , semigroups ((> 0.9.2 || == 0.9.2) && < 0.16)
    , anonymous-sums ((> 0.4.0.0 || == 0.4.0.0) && < 0.5)
    , matchers ((> 0.18.0.0 || == 0.18.0.0) && < 0.19)
    , multiarg ((> 0.24.0.4 || == 0.24.0.4) && < 0.27.0.0)
    , ofx ((> 0.4.0.2 || == 0.4.0.2) && < 0.5)
    , prednote ((> 0.22.0.2 || == 0.22.0.2) && < 0.23)
    , rainbow ((> 0.14.0.0 || == 0.14.0.0) && < 0.15)
    , rainbox ((> 0.4.0.2 || == 0.4.0.2) && < 0.5)
  if flag(debug)
    ghc-options:
        -auto-all
      , -caf-all
      , -rtsopts
  ghc-options:
      -Wall
  default-language: Haskell2010

Executable penny-gibberish
  main-is: penny-gibberish.hs
  other-modules:
      Copper
    , Copper.Gen.Parsers
    , Copper.Gen.Terminals
    , Copper.Parser
    , Copper.Render
    , Lincoln
  build-depends:
      penny == 0.33.0.0
    , base ((> 4.5.0.0 || == 4.5.0.0) && < 4.8)
    , multiarg ((> 0.24.0.4 || == 0.24.0.4) && < 0.27.0.0)
    , QuickCheck ((> 2.7 || == 2.7) && < 2.8)
    , random-shuffle == 0.0.4
    , random ((> 1.0.0.0 || == 1.0.0.0) && < 1.1)
    , semigroups ((> 0.9.2 || == 0.9.2) && < 0.16)
    , text ((> 0.11.3.1 || == 0.11.3.1) && < 1.2)
    , time ((> 1.4 || == 1.4) && < 1.5)
    , transformers ((> 0.3.0.0 || == 0.3.0.0) && < 0.5)
  hs-source-dirs:
      tests
  if flag(build-penny-gibberish)
    buildable: True
  else
    buildable: False
  if flag(debug)
    ghc-options:
        -auto-all
      , -caf-all
      , -rtsopts
  ghc-options:
      -Wall
  default-language: Haskell2010

Executable penny
  main-is: penny-main.hs
  other-modules:
      Paths_penny
  hs-source-dirs:
      bin
  build-depends:
      penny == 0.33.0.0
    , base ((> 4.5.0.0 || == 4.5.0.0) && < 4.8)
  if flag(build-penny)
    buildable: True
  else
    buildable: False
  if flag(debug)
    ghc-options:
        -auto-all
      , -caf-all
      , -rtsopts
  ghc-options:
      -Wall
  default-language: Haskell2010

Executable penny-selloff
  main-is: penny-selloff.hs
  other-modules:
      Paths_penny
  hs-source-dirs:
      bin
  build-depends:
      penny == 0.33.0.0
    , base ((> 4.5.0.0 || == 4.5.0.0) && < 4.8)
  if flag(build-penny-selloff)
    buildable: True
  else
    buildable: False
  if flag(debug)
    ghc-options:
        -auto-all
      , -caf-all
      , -rtsopts
  ghc-options:
      -Wall
  default-language: Haskell2010

Executable penny-diff
  main-is: penny-diff.hs
  other-modules:
      Paths_penny
  hs-source-dirs:
      bin
  build-depends:
      penny == 0.33.0.0
    , base ((> 4.5.0.0 || == 4.5.0.0) && < 4.8)
  if flag(build-penny-diff)
    buildable: True
  else
    buildable: False
  if flag(debug)
    ghc-options:
        -auto-all
      , -caf-all
      , -rtsopts
  ghc-options:
      -Wall
  default-language: Haskell2010

Executable penny-reprint
  main-is: penny-reprint.hs
  other-modules:
      Paths_penny
  hs-source-dirs:
      bin
  build-depends:
      penny == 0.33.0.0
    , base ((> 4.5.0.0 || == 4.5.0.0) && < 4.8)
  if flag(build-penny-reprint)
    buildable: True
  else
    buildable: False
  if flag(debug)
    ghc-options:
        -auto-all
      , -caf-all
      , -rtsopts
  ghc-options:
      -Wall
  default-language: Haskell2010

Executable penny-reconcile
  main-is: penny-reconcile.hs
  other-modules:
      Paths_penny
  hs-source-dirs:
      bin
  build-depends:
      penny == 0.33.0.0
    , base ((> 4.5.0.0 || == 4.5.0.0) && < 4.8)
  if flag(build-penny-reconcile)
    buildable: True
  else
    buildable: False
  if flag(debug)
    ghc-options:
        -auto-all
      , -caf-all
      , -rtsopts
  ghc-options:
      -Wall
  default-language: Haskell2010

Test-Suite penny-test
  type: exitcode-stdio-1.0
  main-is: penny-test.hs
  other-modules:
      Copper
    , Copper.Gen.Parsers
    , Copper.Gen.Terminals
    , Copper.Parser
    , Copper.Render
    , Lincoln
  build-depends:
      penny == 0.33.0.0
    , base ((> 4.5.0.0 || == 4.5.0.0) && < 4.8)
    , anonymous-sums ((> 0.4.0.0 || == 0.4.0.0) && < 0.5)
    , QuickCheck ((> 2.7 || == 2.7) && < 2.8)
    , tasty ((> 0.8 || == 0.8) && < 0.9)
    , tasty-quickcheck ((> 0.8 || == 0.8) && < 0.9)
    , random-shuffle == 0.0.4
    , parsec ((> 3.1.3 || == 3.1.3) && < 3.2)
    , semigroups ((> 0.9.2 || == 0.9.2) && < 0.16)
    , text ((> 0.11.3.1 || == 0.11.3.1) && < 1.2)
    , time ((> 1.4 || == 1.4) && < 1.5)
    , transformers ((> 0.3.0.0 || == 0.3.0.0) && < 0.5)
  hs-source-dirs:
      tests
  if flag(debug)
    ghc-options:
        -auto-all
      , -caf-all
      , -rtsopts
  ghc-options:
      -Wall
  default-language: Haskell2010
