Name: penny-convert
Version: 0.1
Cabal-version: >=1.8
Build-Type: Simple
License: MIT
Copyright: 2012 Omari Norman.
author: Omari Norman
maintainer: omari@smileystation.com
stability: Experimental
homepage: http://www.github.com/massysett/penny
bug-reports: omari@smileystation.com
Category: Console, Finance
License-File: LICENSE
synopsis: Convert ledger files from version 0.5 to version 0.7

description: This is a self-contained executable (without any dependency on
  penny-lib) to convert from the file format used in version 0.5 of the
  library to the file format used in version 0.7. One change in
  the file format is that debits are indicated with a '<' and credits
  with a '>'. Another change is that radix and grouping characters are no
  longer selectable. The radix is always '.', and the grouping character
  is always the thin space (Unicode code point U+2009). Another change
  is that there no longer is a default time zone; all dates and times
  are assumed to be UTC unless stated otherwise in a particular
  price or transaction. Also, the quoting character for payees was changed
  from '<' and '>' to '~'.
  .
  This program simply changes the manner in which debits
  and credits are rendered. It makes no attempt to change the rendering
  of quantities to account for the new rules, so simply leave
  digit grouping off in the output.

Executable penny-convert
    Build-depends:
        base ==4.*,
        text ==0.11.*,
        explicit-exception ==0.1.*,
        containers ==0.4.*,
        transformers == 0.3.*,
        time ==1.4.*,
        Decimal >= 0.2.2 && < 0.3,
        parsec >= 3.1.2 && < 3.2,
        multiarg ==0.6.*,
        matchers ==0.2.*,
        monad-loops ==0.3.*,
        old-locale ==1.0.*,
        semigroups ==0.8.*,
        split ==0.1.*

    Main-is: penny-convert.hs
    GHC-Options: -Wall
    Other-modules:
        Penny,
        Penny.Cabin,
        Penny.Cabin.Allocate,
        Penny.Cabin.Balance,
        Penny.Cabin.Balance.Convert,
        Penny.Cabin.Balance.Convert.Chunker,
        Penny.Cabin.Balance.Convert.Help,
        Penny.Cabin.Balance.Convert.Options,
        Penny.Cabin.Balance.Convert.Parser,
        Penny.Cabin.Balance.MultiCommodity,
        Penny.Cabin.Balance.MultiCommodity.Chunker,
        Penny.Cabin.Balance.MultiCommodity.Help,
        Penny.Cabin.Balance.MultiCommodity.Parser,
        Penny.Cabin.Balance.Util,
        Penny.Cabin.Chunk,
        Penny.Cabin.Chunk.Switch,
        Penny.Cabin.Colors,
        Penny.Cabin.Colors.DarkBackground,
        Penny.Cabin.Colors.LightBackground,
        Penny.Cabin.Interface,
        Penny.Cabin.Meta,
        Penny.Cabin.Options,
        Penny.Cabin.Parsers,
        Penny.Cabin.Posts,
        Penny.Cabin.Posts.Allocate,
        Penny.Cabin.Posts.Allocated,
        Penny.Cabin.Posts.BottomRows,
        Penny.Cabin.Posts.Fields,
        Penny.Cabin.Posts.Growers,
        Penny.Cabin.Posts.Chunk,
        Penny.Cabin.Posts.Help,
        Penny.Cabin.Posts.Meta,
        Penny.Cabin.Posts.Parser,
        Penny.Cabin.Posts.Spacers,
        Penny.Cabin.Posts.Types,
        Penny.Cabin.Row,
        Penny.Cabin.TextFormat,
        Penny.Copper,
        Penny.Copper.Account,
        Penny.Copper.Amount,
        Penny.Copper.Comments,
        Penny.Copper.Commodity,
        Penny.Copper.DateTime,
        Penny.Copper.Entry,
        Penny.Copper.Flag,
        Penny.Copper.Item,
        Penny.Copper.Memos.Posting,
        Penny.Copper.Memos.Transaction,
        Penny.Copper.Number,
        Penny.Copper.Payees,
        Penny.Copper.Posting,
        Penny.Copper.Price,
        Penny.Copper.Qty,
        Penny.Copper.Tags,
        Penny.Copper.TopLine,
        Penny.Copper.Transaction,
        Penny.Copper.Util,
        Penny.Liberty,
        Penny.Liberty.Expressions,
        Penny.Liberty.Expressions.Infix,
        Penny.Liberty.Expressions.RPN,
        Penny.Lincoln,
        Penny.Lincoln.Balance,
        Penny.Lincoln.Bits,
        Penny.Lincoln.Bits.Account,
        Penny.Lincoln.Bits.Amount,
        Penny.Lincoln.Bits.Commodity,
        Penny.Lincoln.Bits.DateTime,
        Penny.Lincoln.Bits.DrCr,
        Penny.Lincoln.Bits.Entry,
        Penny.Lincoln.Bits.Flag,
        Penny.Lincoln.Bits.Memo,
        Penny.Lincoln.Bits.Number,
        Penny.Lincoln.Bits.Payee,
        Penny.Lincoln.Bits.Price,
        Penny.Lincoln.Bits.PricePoint,
        Penny.Lincoln.Bits.Qty,
        Penny.Lincoln.Bits.Tags,
        Penny.Lincoln.Builders,
        Penny.Lincoln.Family,
        Penny.Lincoln.Family.Child,
        Penny.Lincoln.Family.Family,
        Penny.Lincoln.Family.Siblings,
        Penny.Lincoln.HasText,
        Penny.Lincoln.Matchers,
        Penny.Lincoln.Meta,
        Penny.Lincoln.NestedMap,
        Penny.Lincoln.Predicates,
        Penny.Lincoln.PriceDb,
        Penny.Lincoln.Queries,
        Penny.Lincoln.Serial,
        Penny.Lincoln.TextNonEmpty,
        Penny.Lincoln.Transaction,
        Penny.Lincoln.Transaction.Unverified,
        Penny.Shield,
        Penny.Zinc,
        Penny.Zinc.Error,
        Penny.Zinc.Help,
        Penny.Zinc.Parser,
        Penny.Zinc.Parser.Defaults,
        Penny.Zinc.Parser.Filter,
        Penny.Zinc.Parser.Ledgers,
        Penny.Zinc.Parser.Report

    ghc-options: -Wall
    if flag(debug)
      ghc-options: -auto-all -caf-all

Flag debug
    Description: turns on some debugging options
    Default: False
