name: genPennyCabal
version: 0.1
cabal-version: >= 1.2
build-type: Simple

Executable genPennyCabal
  main-is: genPennyCabal.hs
  build-depends: cartel == 0.18.*
               , base ==4.9.*
  other-modules: Dependencies

Executable genCopperCabal
  main-is: genCopperCabal.hs
  build-depends: cartel ==0.18.*
               , base ==4.9.*
  other-modules: Dependencies
