-- This Cabal file generated using the Cartel library.
-- Cartel is available at:
-- http://www.github.com/massysett/cartel
--
-- Script name used to generate: genCopperCabal
-- Generated on: 2016-06-12 07:59:46.2065 EDT
-- Cartel library version: 0.14.2.8

name: penny-copper
version: 0.33.0.0
cabal-version: >= 1.14
license: BSD3
license-file: LICENSE
build-type: Simple
copyright: 2012 - 2015 Omari Norman
author: Omari Norman
maintainer: omari@smileystation.com
stability: Experimental
homepage: http://www.github.com/massysett/penny
bug-reports: http://www.github.com/massysett/penny/issues
synopsis: Extensible double-entry accounting system
description:
  Penny is a double-entry accounting system.
  .
  This package contains the grammar for ledger files.
  .
  For more information, please see the README.md file, which
  is available in the source tarball or is visible at the bottom
  of the Penny homepage:
  .
  <http://www.github.com/massysett/penny>
category: Console, Finance
extra-source-files:
  README.md

Library
  exposed-modules:
    Penny.Copper.EarleyGrammar
    Penny.Copper.Grammar
    Penny.Copper.Optics
    Penny.Copper.Productions
    Penny.Copper.Terminalizers
    Penny.Copper.Types
  build-depends:
      base >= 4.9 && < 5
    , text >= 1.2
    , containers >= 0.5
    , time >= 1.4
    , transformers >= 0.3
    , bifunctors >= 4.2
    , rainbow >= 0.26
    , rainbox >= 0.18
    , semigroups >= 0.16.1
    , contravariant >= 1.2
    , bytestring >= 0.10.4
    , turtle >= 1.0.2
    , mtl >= 2.2.1
    , lens >= 4.9
    , async >= 2.0
    , pipes >= 4.1.4
    , pipes-safe >= 2.2
    , pipes-cliff >= 0.10
    , process >= 1.2.0.0
    , anonymous-sums >= 0.4.0.0
    , void >= 0.7
    , pretty >= 1.1.2
    , managed >= 1.0
    , tasty >= 0.11
    , tasty-hunit >= 0.9.2
    , monoid-subclasses >= 0.4.1
    , pinchot >= 0.18.0.0
    , Earley >= 0.10.1.0
    , ofx >= 0.4.0.4
    , parsec >= 3.1.9
  ghc-options:
    -W
  default-language: Haskell2010
  hs-source-dirs:
    lib
  other-extensions:
    TemplateHaskell

source-repository head
  type: git
  location: https://github.com/massysett/penny.git
