Name: penny-test
Version: 0.5.1.0
Cabal-version: >= 1.8
Build-type: Simple
License: MIT
Copyright: 2012 Omari Norman.
author: Omari Norman
maintainer: omari@smileystation.com
stability: Experimental
homepage: http://www.github.com/massysett/penny
bug-reports: omari@smileystation.com
Category: Console, Finance
License-File: LICENSE
synopsis: Extensible double-entry accounting system - tests

description: Penny tests

Executable penny-test
    Main-is: penny-test.hs
    Build-depends:
        base ==4.*,
        explicit-exception ==0.1.*,
        parsec ==3.1.*,
        penny-lib ==0.5.1.0,
        QuickCheck ==2.5.*,
        random-shuffle ==0.0.4,
        semigroups ==0.8.*,
        test-framework ==0.6.*,
        test-framework-quickcheck2 ==0.2.*,
        text ==0.11.*,
        time ==1.4.*,
        transformers == 0.3.*

    Other-modules:
          PennyTest
        , PennyTest.Penny
        , PennyTest.Penny.Copper
        , PennyTest.Penny.Copper.Gen.Parsers
        , PennyTest.Penny.Copper.Gen.Terminals
        , PennyTest.Penny.Copper.Parsec
        , PennyTest.Penny.Copper.Render
        , PennyTest.Penny.Lincoln
        , PennyTest.Penny.Lincoln.Bits
        , PennyTest.Penny.Lincoln.Bits.Qty

    ghc-options: -Wall

Executable penny-gibberish
    Main-is: penny-gibberish.hs
    Build-depends:
          base ==4.*
        , QuickCheck ==2.5.*
        , text ==0.11.*
        , random ==1.0.*
        , explicit-exception ==0.1.*
        , penny-lib ==0.5.1.0
        , semigroups ==0.8.*
        , test-framework ==0.6.*
        , test-framework-quickcheck2 ==0.2.*
        , transformers ==0.3.*
        , random-shuffle ==0.0.4
        , time ==1.4.*

    Other-modules:
          PennyTest.Penny.Copper.Gen.Parsers

    ghc-options: -Wall
