-- This Cabal file generated using the Cartel library.
-- Cartel is available at:
-- http://www.github.com/massysett/cartel
--
-- Script name used to generate: genCabal.hs
-- Generated on: 2014-12-26 22:36:31.040819 EST
-- Cartel library version: 0.10.0.2
name: penny-tests
version: 0.33.0.0
cabal-version: >= 1.14
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: 2012 - 2014 Omari Norman
author: Omari Norman
maintainer: omari@smileystation.com
stability: Experimental
homepage: http://www.github.com/massysett/penny
bug-reports: omari@smileystation.com
synopsis: Extensible double-entry accounting system
description:
  Penny is a double-entry accounting system.  You keep your records
  in a plain-text file, and Penny gives you useful reports in
  your UNIX shell.
  .
  For more information, please see
  .
  <http://www.github.com/massysett/penny>
  .
  This package contains a library and executables for testing.
category: Console, Finance
tested-with: GHC == 7.8.3

source-repository head
  type: git
  location: https://github.com/massysett/penny.git
  branch: master

Flag debug
  Description: Turns on debugging options
  Default: False
  Manual: True

Library
  exposed-modules:
      Penny.Lincoln.Decimal.Tests
    , Penny.Lincoln.Natural.Tests
  exposed: True
  hs-source-dirs:
      lib
  build-depends:
      base ((> 4.7.0.0 || == 4.7.0.0) && < 4.8)
    , QuickCheck ((> 2.7 || == 2.7) && < 2.8)
    , quickpull ((> 0.4 || == 0.4) && < 0.5)
    , penny == 0.33.0.0
  if flag(debug)
    ghc-options:
        -auto-all
      , -caf-all
      , -rtsopts
  ghc-options:
      -Wall
  default-language: Haskell2010

Test-Suite penny-properties
  type: exitcode-stdio-1.0
  main-is: penny-properties.hs
  hs-source-dirs:
      progs
    , lib
  build-depends:
      base ((> 4.7.0.0 || == 4.7.0.0) && < 4.8)
    , QuickCheck ((> 2.7 || == 2.7) && < 2.8)
    , quickpull ((> 0.4 || == 0.4) && < 0.5)
    , penny == 0.33.0.0
  if flag(debug)
    ghc-options:
        -auto-all
      , -caf-all
      , -rtsopts
  ghc-options:
      -Wall
  default-language: Haskell2010
